--- a/Customer Churn Prediction.ipynb
+++ b/Customer Churn Prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3507101c",
+   "id": "ac36b9ce",
    "metadata": {},
    "source": [
     "# `Data Description`\n",
@@ -3034,7 +3034,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c786471",
+   "id": "e78071a1",
    "metadata": {},
    "source": [
     "* **Decision Tree, Random Forest, and Gradient Boosting achieved perfect accuracy on the training data, suggesting potential overfitting.**\n",
@@ -3478,7 +3478,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "480f22bd",
+   "id": "fc2e3f32",
    "metadata": {},
    "source": [
     "* **Decision Tree and Random Forest still achieve perfect accuracy, likely overfitting again.**\n",
@@ -4522,7 +4522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3e54533",
+   "id": "9b401cbe",
    "metadata": {},
    "source": [
     "* **The performance of ensembles can vary, but they are usually not much better than individual algorithms.**\n",
@@ -4533,7 +4533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33814953",
+   "id": "d53db929",
    "metadata": {},
    "source": [
     "# `Model Building: PCA`"
@@ -4542,7 +4542,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "58d92623",
+   "id": "8a265d28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4552,7 +4552,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "7cf7d3b1",
+   "id": "c4c58a60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4563,7 +4563,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "f8636703",
+   "id": "8528a1dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4575,7 +4575,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "b9201c22",
+   "id": "b25304e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4591,7 +4591,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "a2697d3a",
+   "id": "da63c727",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4605,7 +4605,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "09390cd2",
+   "id": "54963848",
    "metadata": {},
    "outputs": [
     {
@@ -4733,7 +4733,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "b874045d",
+   "id": "75f182cd",
    "metadata": {},
    "outputs": [
     {
@@ -4861,7 +4861,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "019891c6",
+   "id": "e20b116a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4875,7 +4875,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "062b7dfa",
+   "id": "d4f76d98",
    "metadata": {},
    "outputs": [
     {
@@ -4896,7 +4896,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "6ea20f94",
+   "id": "e7d0fd45",
    "metadata": {},
    "outputs": [
     {
@@ -4929,7 +4929,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a06b68a",
+   "id": "4799007d",
    "metadata": {},
    "source": [
     "**8 out of 9 principal components (PCs) capture approximately 98% of the variance of the data. Therefore, I will select 8 PCs for further analysis.**"
@@ -4938,7 +4938,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "5f473cde",
+   "id": "5181f594",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4951,7 +4951,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "e8f23f6a",
+   "id": "a8511f9a",
    "metadata": {},
    "outputs": [
     {
@@ -4972,7 +4972,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "72bad6ae",
+   "id": "30425b5a",
    "metadata": {},
    "outputs": [
     {
@@ -5181,7 +5181,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "d7e6056b",
+   "id": "9ff05ad5",
    "metadata": {},
    "outputs": [
     {
@@ -5347,7 +5347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f45f2db",
+   "id": "8304af36",
    "metadata": {},
    "source": [
     "**There's no significant improvement in performance with PCA.**"
@@ -5355,7 +5355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "292a7543",
+   "id": "b9bf9e5a",
    "metadata": {},
    "source": [
     "**`Final Model:` XGBClassifier is the best-performing algorithm on both the training and test data, using 9 variables, 4 variables, or PCA. It has the highest accuracy, precision, recall, and F1-score on all three. Therefore, I will build the final model using XGBoost Classifier using 9 variables.**"
@@ -5363,7 +5363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28615286",
+   "id": "33f0c646",
    "metadata": {},
    "source": [
     "# `Final Model: XGBoost Using 9 variables`"
@@ -5372,7 +5372,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "d48f6089",
+   "id": "b9bfeef5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5383,7 +5383,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "868fda45",
+   "id": "da5ad032",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5395,7 +5395,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "e82b158b",
+   "id": "70cee2df",
    "metadata": {},
    "outputs": [
     {
@@ -5416,7 +5416,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "46d6f68b",
+   "id": "949b281d",
    "metadata": {},
    "outputs": [
     {
@@ -5440,7 +5440,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "f4f12d26",
+   "id": "5aa1680f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5456,7 +5456,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "9551c3e5",
+   "id": "ea90070b",
    "metadata": {},
    "outputs": [
     {
@@ -5494,7 +5494,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "37b758db",
+   "id": "784cee71",
    "metadata": {},
    "outputs": [
     {
@@ -5593,7 +5593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b8c2476",
+   "id": "77025724",
    "metadata": {},
    "source": [
     "# `Hyperparameter Tunning`\n",
@@ -5604,7 +5604,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "8e265a2c",
+   "id": "d76777f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5622,7 +5622,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "60214653",
+   "id": "c1ba7a1c",
    "metadata": {},
    "outputs": [
     {
@@ -5674,7 +5674,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a29e1ad6",
+   "id": "40bc91f3",
    "metadata": {},
    "source": [
     "**According to the problem statement, false negatives are more important to reduce. Therefore, I selected recall as a metric to focus on.**"
@@ -5683,7 +5683,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "02960298",
+   "id": "388583f2",
    "metadata": {},
    "outputs": [
     {
@@ -5711,7 +5711,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5094f28b",
+   "id": "e6df616f",
    "metadata": {},
    "source": [
     "**After hyperparameter tuning, the performance of the model did not improve. Hence, I choose XGBoost CLassifier without hyperparameter tunning and perform cross-validation on it.**"
@@ -5719,7 +5719,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c364f0f3",
+   "id": "e4c84713",
    "metadata": {},
    "source": [
     "# `Cross Validation`\n",
@@ -5736,7 +5736,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "68c7ba25",
+   "id": "722ec1af",
    "metadata": {},
    "outputs": [
     {
@@ -5764,7 +5764,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "1d6a49d8",
+   "id": "cc38d567",
    "metadata": {},
    "outputs": [
     {
@@ -5791,7 +5791,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4a3f1d7",
+   "id": "ac2c6dbb",
    "metadata": {},
    "source": [
     "# `Finding Optimal Threshold`"
@@ -5800,7 +5800,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "4aa92561",
+   "id": "ed16e2cf",
    "metadata": {},
    "outputs": [
     {
@@ -5930,7 +5930,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "891b8529",
+   "id": "da5a3713",
    "metadata": {},
    "outputs": [
     {
@@ -6095,7 +6095,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5345fd58",
+   "id": "13d407ce",
    "metadata": {},
    "source": [
     "## `Check the Trade-Off Between Accuracy, Sensitivity, Specitivity, F-1 Score and Probabilities (Thresholds)`"
@@ -6104,7 +6104,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "c5aa2e17",
+   "id": "fb5d9792",
    "metadata": {},
    "outputs": [
     {
@@ -6155,7 +6155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1463f348",
+   "id": "d45707cd",
    "metadata": {},
    "source": [
     "**he graph indicates that 0.5 is the best threshold point, where accuracy, sensitivity, specificity, and F1 score are all stable.**"
@@ -6163,7 +6163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f50f6b0",
+   "id": "aff92acb",
    "metadata": {},
    "source": [
     "# `Model Evaulation (XG Boost)`"
@@ -6171,7 +6171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ae8bea9",
+   "id": "2dad455e",
    "metadata": {},
    "source": [
     "## `Train & Test Data Metrics`"
@@ -6180,7 +6180,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "1919b328",
+   "id": "85c95737",
    "metadata": {},
    "outputs": [
     {
@@ -6274,7 +6274,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "749c4a4f",
+   "id": "9bfde6b2",
    "metadata": {},
    "source": [
     "## `Confusion Matrix`\n",
@@ -6285,7 +6285,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "dd12de3a",
+   "id": "80573d1f",
    "metadata": {},
    "outputs": [
     {
@@ -6382,7 +6382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5cd56778",
+   "id": "89a0f0dc",
    "metadata": {},
    "source": [
     "## `ROC-AUC Curve`\n",
@@ -6393,7 +6393,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "a04cef50",
+   "id": "c6fc5eeb",
    "metadata": {},
    "outputs": [
     {
@@ -6450,7 +6450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a42e80f2",
+   "id": "c82c9f3a",
    "metadata": {},
    "source": [
     "# `Important Features in Model Building`"
@@ -6459,7 +6459,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "8c15ed75",
+   "id": "2c56a0da",
    "metadata": {},
    "outputs": [
     {
@@ -6561,15 +6561,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b41a7261",
+   "id": "b8b5c919",
    "metadata": {},
    "source": [
-    "**he four variables ['Monthly_Bill', 'Total_Usage_GB', 'Age', and 'Subscription_Length_Months'] are the most important variables in the analysis because they contain 94% of the feature importance or information gain in predicting whether a customer will churn or not.**"
+    "**The four variables ['Monthly_Bill', 'Total_Usage_GB', 'Age', and 'Subscription_Length_Months'] are the most important variables in the analysis because they contain 94% of the feature importance or information gain in predicting whether a customer will churn or not.**"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "99cd15e3",
+   "id": "900288ca",
    "metadata": {},
    "source": [
     "# `Save model in a pickle file`"
@@ -6578,7 +6578,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "3acda083",
+   "id": "255a9315",
    "metadata": {},
    "outputs": [
     {
@@ -6601,7 +6601,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3943929",
+   "id": "bc365f6d",
    "metadata": {},
    "source": [
     "# `Outcome`\n",
@@ -6612,7 +6612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90ba88b5",
+   "id": "196beed2",
    "metadata": {},
    "outputs": [],
    "source": []
