--- a/Customer Churn Prediction.ipynb
+++ b/Customer Churn Prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ac36b9ce",
+   "id": "3cfc82e2",
    "metadata": {},
    "source": [
     "# `Data Description`\n",
@@ -473,7 +473,7 @@
     }
    ],
    "source": [
-    "df.isna().sum()/len(df)*100,"
+    "df.isna().sum()/len(df)*100"
    ]
   },
   {
@@ -2790,7 +2790,7 @@
    "id": "4ec6c0fa",
    "metadata": {},
    "source": [
-    "**he training data does not contain multicollinearity because all of the variables have a VIF value less than 5.**"
+    "**The training data does not contain multicollinearity because all of the variables have a VIF value less than 5.**"
    ]
   },
   {
@@ -3034,7 +3034,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e78071a1",
+   "id": "64c4b923",
    "metadata": {},
    "source": [
     "* **Decision Tree, Random Forest, and Gradient Boosting achieved perfect accuracy on the training data, suggesting potential overfitting.**\n",
@@ -3478,7 +3478,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc2e3f32",
+   "id": "4b51c921",
    "metadata": {},
    "source": [
     "* **Decision Tree and Random Forest still achieve perfect accuracy, likely overfitting again.**\n",
@@ -4522,7 +4522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b401cbe",
+   "id": "667932e4",
    "metadata": {},
    "source": [
     "* **The performance of ensembles can vary, but they are usually not much better than individual algorithms.**\n",
@@ -4533,7 +4533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d53db929",
+   "id": "2d764cee",
    "metadata": {},
    "source": [
     "# `Model Building: PCA`"
@@ -4542,7 +4542,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "8a265d28",
+   "id": "94366989",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4552,7 +4552,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "c4c58a60",
+   "id": "b7040da2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4563,19 +4563,17 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "8528a1dd",
+   "id": "c08cf20c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
     "X_train, X_test, y_train, y_test = train_test_split(x, y, test_size=0.3, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "b25304e5",
+   "id": "1369be14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4591,7 +4589,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "da63c727",
+   "id": "16d2a470",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4605,7 +4603,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "54963848",
+   "id": "16766486",
    "metadata": {},
    "outputs": [
     {
@@ -4733,7 +4731,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "75f182cd",
+   "id": "b4452a34",
    "metadata": {},
    "outputs": [
     {
@@ -4861,7 +4859,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "e20b116a",
+   "id": "ef9075d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4875,7 +4873,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "d4f76d98",
+   "id": "f85ebff6",
    "metadata": {},
    "outputs": [
     {
@@ -4896,7 +4894,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "e7d0fd45",
+   "id": "11681537",
    "metadata": {},
    "outputs": [
     {
@@ -4929,7 +4927,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4799007d",
+   "id": "1c3cfb5a",
    "metadata": {},
    "source": [
     "**8 out of 9 principal components (PCs) capture approximately 98% of the variance of the data. Therefore, I will select 8 PCs for further analysis.**"
@@ -4938,7 +4936,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "5181f594",
+   "id": "fad67fa8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4951,7 +4949,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "a8511f9a",
+   "id": "20bae1ae",
    "metadata": {},
    "outputs": [
     {
@@ -4972,7 +4970,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "30425b5a",
+   "id": "16cbbe8c",
    "metadata": {},
    "outputs": [
     {
@@ -5181,7 +5179,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "9ff05ad5",
+   "id": "651353c3",
    "metadata": {},
    "outputs": [
     {
@@ -5347,7 +5345,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8304af36",
+   "id": "01aa5ff2",
    "metadata": {},
    "source": [
     "**There's no significant improvement in performance with PCA.**"
@@ -5355,7 +5353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9bf9e5a",
+   "id": "003e0238",
    "metadata": {},
    "source": [
     "**`Final Model:` XGBClassifier is the best-performing algorithm on both the training and test data, using 9 variables, 4 variables, or PCA. It has the highest accuracy, precision, recall, and F1-score on all three. Therefore, I will build the final model using XGBoost Classifier using 9 variables.**"
@@ -5363,7 +5361,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33f0c646",
+   "id": "551aff0a",
    "metadata": {},
    "source": [
     "# `Final Model: XGBoost Using 9 variables`"
@@ -5372,7 +5370,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "b9bfeef5",
+   "id": "017bf4e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5383,19 +5381,17 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "da5ad032",
+   "id": "1ad161be",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
     "X_train, X_test, y_train, y_test = train_test_split(x, y, test_size=0.3, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "70cee2df",
+   "id": "b636f4b1",
    "metadata": {},
    "outputs": [
     {
@@ -5416,7 +5412,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "949b281d",
+   "id": "5eeffc6d",
    "metadata": {},
    "outputs": [
     {
@@ -5440,7 +5436,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "5aa1680f",
+   "id": "7af7dc73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5456,7 +5452,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "ea90070b",
+   "id": "bd3ce919",
    "metadata": {},
    "outputs": [
     {
@@ -5494,7 +5490,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "784cee71",
+   "id": "dc09c244",
    "metadata": {},
    "outputs": [
     {
@@ -5593,7 +5589,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77025724",
+   "id": "b20b997f",
    "metadata": {},
    "source": [
     "# `Hyperparameter Tunning`\n",
@@ -5604,7 +5600,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "d76777f1",
+   "id": "123a8187",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5622,7 +5618,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "c1ba7a1c",
+   "id": "9866b820",
    "metadata": {},
    "outputs": [
     {
@@ -5674,7 +5670,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40bc91f3",
+   "id": "c77426fe",
    "metadata": {},
    "source": [
     "**According to the problem statement, false negatives are more important to reduce. Therefore, I selected recall as a metric to focus on.**"
@@ -5683,7 +5679,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "388583f2",
+   "id": "b4bc2604",
    "metadata": {},
    "outputs": [
     {
@@ -5711,7 +5707,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6df616f",
+   "id": "dbae3723",
    "metadata": {},
    "source": [
     "**After hyperparameter tuning, the performance of the model did not improve. Hence, I choose XGBoost CLassifier without hyperparameter tunning and perform cross-validation on it.**"
@@ -5719,7 +5715,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4c84713",
+   "id": "94e29ae7",
    "metadata": {},
    "source": [
     "# `Cross Validation`\n",
@@ -5736,7 +5732,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "722ec1af",
+   "id": "c2a1e598",
    "metadata": {},
    "outputs": [
     {
@@ -5764,7 +5760,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "cc38d567",
+   "id": "a6c7b3d6",
    "metadata": {},
    "outputs": [
     {
@@ -5780,8 +5776,6 @@
    "source": [
     "#cross validation of recall\n",
     "\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "\n",
     "scores = cross_val_score(xgb_classifier, X_train, y_train, cv=5, scoring='recall',n_jobs=-1)\n",
     "\n",
     "print(\"Cross-Validation Scores (Recall):\", scores)\n",
@@ -5791,7 +5785,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac2c6dbb",
+   "id": "54677bf9",
    "metadata": {},
    "source": [
     "# `Finding Optimal Threshold`"
@@ -5800,7 +5794,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "ed16e2cf",
+   "id": "ad4e4573",
    "metadata": {},
    "outputs": [
     {
@@ -5930,7 +5924,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "da5a3713",
+   "id": "5d000988",
    "metadata": {},
    "outputs": [
     {
@@ -6095,7 +6089,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13d407ce",
+   "id": "2f5513a7",
    "metadata": {},
    "source": [
     "## `Check the Trade-Off Between Accuracy, Sensitivity, Specitivity, F-1 Score and Probabilities (Thresholds)`"
@@ -6104,7 +6098,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "fb5d9792",
+   "id": "c5ad2048",
    "metadata": {},
    "outputs": [
     {
@@ -6155,15 +6149,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d45707cd",
+   "id": "33900411",
    "metadata": {},
    "source": [
-    "**he graph indicates that 0.5 is the best threshold point, where accuracy, sensitivity, specificity, and F1 score are all stable.**"
+    "**The graph indicates that 0.5 is the best threshold point, where accuracy, sensitivity, specificity, and F1 score are all stable.**"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "aff92acb",
+   "id": "7c81360d",
    "metadata": {},
    "source": [
     "# `Model Evaulation (XG Boost)`"
@@ -6171,7 +6165,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2dad455e",
+   "id": "9c2cb8fe",
    "metadata": {},
    "source": [
     "## `Train & Test Data Metrics`"
@@ -6180,7 +6174,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "85c95737",
+   "id": "bd89a37d",
    "metadata": {},
    "outputs": [
     {
@@ -6274,7 +6268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bfde6b2",
+   "id": "6ed2be82",
    "metadata": {},
    "source": [
     "## `Confusion Matrix`\n",
@@ -6285,7 +6279,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "80573d1f",
+   "id": "0d130517",
    "metadata": {},
    "outputs": [
     {
@@ -6382,7 +6376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89a0f0dc",
+   "id": "15b520c0",
    "metadata": {},
    "source": [
     "## `ROC-AUC Curve`\n",
@@ -6393,7 +6387,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "c6fc5eeb",
+   "id": "be8d8208",
    "metadata": {},
    "outputs": [
     {
@@ -6450,7 +6444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c82c9f3a",
+   "id": "5b272b92",
    "metadata": {},
    "source": [
     "# `Important Features in Model Building`"
@@ -6459,7 +6453,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "2c56a0da",
+   "id": "a90c65f3",
    "metadata": {},
    "outputs": [
     {
@@ -6561,7 +6555,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8b5c919",
+   "id": "91105e19",
    "metadata": {},
    "source": [
     "**The four variables ['Monthly_Bill', 'Total_Usage_GB', 'Age', and 'Subscription_Length_Months'] are the most important variables in the analysis because they contain 94% of the feature importance or information gain in predicting whether a customer will churn or not.**"
@@ -6569,7 +6563,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "900288ca",
+   "id": "4f58250a",
    "metadata": {},
    "source": [
     "# `Save model in a pickle file`"
@@ -6578,7 +6572,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "255a9315",
+   "id": "82acf819",
    "metadata": {},
    "outputs": [
     {
@@ -6601,7 +6595,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc365f6d",
+   "id": "dbbf8995",
    "metadata": {},
    "source": [
     "# `Outcome`\n",
@@ -6612,7 +6606,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "196beed2",
+   "id": "e585340d",
    "metadata": {},
    "outputs": [],
    "source": []
